manifests/stirling-pdf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: docs.jmly.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stirling-pdf
                port:
                  number: 8080
